# dlt_logger

./: .gitignore  CLAUDE.md  PRD.md  README.md  dlt_transfer.ipynb  example_usage.py  logger.py  main.py  pyproject.toml  pytest.ini  tp_logger_pipeline.duckdb
dlt_logger/: __init__.py
dlt_logger/dlt/: __init__.py  athena.py  columns_schema.py  pipeline.py
dlt_logger/logging/: __init__.py  decorators.py  handlers.py  logger.py  models.py
dlt_logger/orchestrator/: __init__.py  workflow.py
dlt_logger/setup/: __init__.py  config.py
dlt_logger/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_models.py
tp_logger/: __init__.py  athena.py  config.py  core.py  handlers.py  logger.py  main.py  models.py  pipeline.py
tp_logger/dlt/: __init__.py  athena.py  columns_schema.py  pipeline.py
tp_logger/logging/: __init__.py  core.py  decorators.py  handlers.py  logger.py  models.py
tp_logger/orchestrator/: __init__.py  workflow.py
tp_logger/setup/: __init__.py
tp_logger/utils/: __init__.py  helpers.py
