[project]
name = "tp-logger"
version = "0.1.0"
description = "Simple logging library with DuckDB storage via DLT Hub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.8",
    "dlt[athena,duckdb]>=0.4.0",
    "duckdb>=1.3.2",
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "pyarrow>=21.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
