[project]
name = "dlt-logger"
version = "0.1.0"
description = "Modern structured logging library with DuckDB storage and AWS Athena integration via DLT Hub"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Joan Claverol", email = "joan@example.com"}
]
license = {text = "MIT"}
keywords = ["logging", "duckdb", "analytics", "structured-logging", "dlt", "athena", "aws"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]
dependencies = [
    "dlt[duckdb]>=0.4.0",
    "duckdb>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
athena = [
    "dlt[athena]>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/JoanClaverol/dlt_logger"
Repository = "https://github.com/JoanClaverol/dlt_logger"
Documentation = "https://github.com/JoanClaverol/dlt_logger#readme"
"Bug Tracker" = "https://github.com/JoanClaverol/dlt_logger/issues"

[dependency-groups]
dev = [
    "pipreqs>=0.5.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dlt_logger"]

[tool.ruff]
target-version = "py39"
line-length = 88
extend-exclude = [
    "tests",
    "example_usage.py",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008", # Do not perform function calls in argument defaults
    "C901", # Complex function
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-v"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
